// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly renders correctly with filters  1`] = `
<div
  className="row"
>
  <div
    className="col-3"
  >
    <legend>
      System State
    </legend>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        defaultChecked={true}
        id="inlineCheckbox1"
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="inlineCheckbox1"
      >
        Free
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        defaultChecked={true}
        id="inlineCheckbox2"
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="inlineCheckbox2"
      >
        Busy
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        defaultChecked={false}
        id="inlineCheckbox3"
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="inlineCheckbox3"
      >
        Down
      </label>
    </div>
  </div>
  <div
    className="col-6"
  >
    <div
      className="VictoryContainer"
      style={
        Object {
          "height": "100%",
          "pointerEvents": "none",
          "position": "relative",
          "touchAction": "none",
          "width": "100%",
        }
      }
    >
      <svg
        aria-labelledby="victory-container-1-title victory-container-1-desc"
        height={400}
        role="img"
        style={
          Object {
            "height": "100%",
            "pointerEvents": "all",
            "width": "100%",
          }
        }
        viewBox="0 0 400 400"
        width={400}
      >
        <g>
          <path
            className={undefined}
            d="M9.184850993605149e-15,-150A150,150,0,1,1,9.184850993605149e-15,150L0,0Z"
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "eventKey": 0,
                "fill": "#28a745",
                "id": 1,
                "padding": 10,
                "stroke": "transparent",
                "strokeWidth": 1,
                "xName": "Free",
              }
            }
            transform="translate(200, 200)"
          />
          <path
            className={undefined}
            d="M9.184850993605149e-15,150A150,150,0,1,1,-2.7554552980815446e-14,-150L0,0Z"
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "eventKey": 1,
                "fill": "#ffc107",
                "id": 2,
                "padding": 10,
                "stroke": "transparent",
                "strokeWidth": 1,
                "xName": "Busy",
              }
            }
            transform="translate(200, 200)"
          />
          <path
            className={undefined}
            d="M-2.7554552980815446e-14,-150L0,0Z"
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "eventKey": 2,
                "fill": "#dc3545",
                "id": 3,
                "padding": 10,
                "stroke": "transparent",
                "strokeWidth": 1,
                "xName": "Down",
              }
            }
            transform="translate(200, 200)"
          />
          <text
            className={undefined}
            dx={0}
            dy={4.97}
            transform={undefined}
            x={370}
            y={200}
          >
            <tspan
              dx={0}
              dy={undefined}
              style={
                Object {
                  "fill": "#252525",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 20,
                  "stroke": "transparent",
                }
              }
              textAnchor="start"
              x={370}
            >
              Free
            </tspan>
          </text>
          <text
            className={undefined}
            dx={0}
            dy={4.97}
            transform={undefined}
            x={30}
            y={200}
          >
            <tspan
              dx={0}
              dy={undefined}
              style={
                Object {
                  "fill": "#252525",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 20,
                  "stroke": "transparent",
                }
              }
              textAnchor="end"
              x={30}
            >
              Busy
            </tspan>
          </text>
          <text
            className={undefined}
            dx={0}
            dy={-2.0300000000000002}
            transform={undefined}
            x={200}
            y={30}
          >
            <tspan
              dx={0}
              dy={undefined}
              style={
                Object {
                  "fill": "#252525",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 20,
                  "stroke": "transparent",
                }
              }
              textAnchor="middle"
              x={200}
            >
              Down
            </tspan>
          </text>
        </g>
      </svg>
      <div
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
            "zIndex": 99,
          }
        }
      >
        <svg
          height={400}
          style={
            Object {
              "height": "100%",
              "overflow": "visible",
              "width": "100%",
            }
          }
          viewBox="0 0 400 400"
          width={400}
        />
      </div>
    </div>
  </div>
  <div
    className="col-2"
  >
    <dt>
      Last Updated
    </dt>
    <dd>
      1516800657040
    </dd>
  </div>
</div>
`;

exports[`renders correctly renders correctly without filters  1`] = `
<div
  className="row"
>
  <div
    className="col-3"
  >
    <legend>
      System State
    </legend>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        defaultChecked={undefined}
        id="inlineCheckbox1"
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="inlineCheckbox1"
      >
        Free
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        defaultChecked={undefined}
        id="inlineCheckbox2"
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="inlineCheckbox2"
      >
        Busy
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        className="form-check-input"
        defaultChecked={undefined}
        id="inlineCheckbox3"
        onClick={[Function]}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="inlineCheckbox3"
      >
        Down
      </label>
    </div>
  </div>
  <div
    className="col-6"
  >
    <div
      className="VictoryContainer"
      style={
        Object {
          "height": "100%",
          "pointerEvents": "none",
          "position": "relative",
          "touchAction": "none",
          "width": "100%",
        }
      }
    >
      <svg
        aria-labelledby="victory-container-2-title victory-container-2-desc"
        height={400}
        role="img"
        style={
          Object {
            "height": "100%",
            "pointerEvents": "all",
            "width": "100%",
          }
        }
        viewBox="0 0 400 400"
        width={400}
      >
        <g>
          <path
            className={undefined}
            d="M9.184850993605149e-15,-150A150,150,0,1,1,9.184850993605149e-15,150L0,0Z"
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "eventKey": 0,
                "fill": "#28a745",
                "id": 1,
                "padding": 10,
                "stroke": "transparent",
                "strokeWidth": 1,
                "xName": "Free",
              }
            }
            transform="translate(200, 200)"
          />
          <path
            className={undefined}
            d="M9.184850993605149e-15,150A150,150,0,1,1,-2.7554552980815446e-14,-150L0,0Z"
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "eventKey": 1,
                "fill": "#ffc107",
                "id": 2,
                "padding": 10,
                "stroke": "transparent",
                "strokeWidth": 1,
                "xName": "Busy",
              }
            }
            transform="translate(200, 200)"
          />
          <path
            className={undefined}
            d="M-2.7554552980815446e-14,-150L0,0Z"
            role="presentation"
            shapeRendering="auto"
            style={
              Object {
                "eventKey": 2,
                "fill": "#dc3545",
                "id": 3,
                "padding": 10,
                "stroke": "transparent",
                "strokeWidth": 1,
                "xName": "Down",
              }
            }
            transform="translate(200, 200)"
          />
          <text
            className={undefined}
            dx={0}
            dy={4.97}
            transform={undefined}
            x={370}
            y={200}
          >
            <tspan
              dx={0}
              dy={undefined}
              style={
                Object {
                  "fill": "#252525",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 20,
                  "stroke": "transparent",
                }
              }
              textAnchor="start"
              x={370}
            >
              Free
            </tspan>
          </text>
          <text
            className={undefined}
            dx={0}
            dy={4.97}
            transform={undefined}
            x={30}
            y={200}
          >
            <tspan
              dx={0}
              dy={undefined}
              style={
                Object {
                  "fill": "#252525",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 20,
                  "stroke": "transparent",
                }
              }
              textAnchor="end"
              x={30}
            >
              Busy
            </tspan>
          </text>
          <text
            className={undefined}
            dx={0}
            dy={-2.0300000000000002}
            transform={undefined}
            x={200}
            y={30}
          >
            <tspan
              dx={0}
              dy={undefined}
              style={
                Object {
                  "fill": "#252525",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 20,
                  "stroke": "transparent",
                }
              }
              textAnchor="middle"
              x={200}
            >
              Down
            </tspan>
          </text>
        </g>
      </svg>
      <div
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
            "zIndex": 99,
          }
        }
      >
        <svg
          height={400}
          style={
            Object {
              "height": "100%",
              "overflow": "visible",
              "width": "100%",
            }
          }
          viewBox="0 0 400 400"
          width={400}
        />
      </div>
    </div>
  </div>
  <div
    className="col-2"
  >
    <dt>
      Last Updated
    </dt>
    <dd>
      1516800657040
    </dd>
  </div>
</div>
`;
